# DoopaBeats

./: .gitignore  CMakeLists.txt
Source/: DrumEngine.cpp  DrumEngine.h  DrumKit.cpp  DrumKit.h  DrumKitEditor.cpp  DrumKitEditor.h  MidiDrumMap.h  MidiImporter.cpp  MidiImporter.h  MidiNoteMap.h  PatternData.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SongEditor.cpp  SongEditor.h  SongPlayer.cpp  SongPlayer.h  UserSongLibrary.cpp  UserSongLibrary.h
